config/app-operator/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: postal-codes-search-ingress
  namespace: default
spec:
  virtualhost:
    fqdn: postal-code-search.35.188.35.143.nip.io
    tls:
      secretName: postal-codes-search-cert
  routes:
  - conditions:
    - prefix: /
    services:
    - name: gateway-postal-codes
      port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: postal-codes-audit-ingress
  namespace: default
spec:
  virtualhost:
    fqdn: postal-code-audit.35.188.35.143.nip.io
    tls:
      secretName: postal-codes-audit-cert
  routes:
  - conditions:
    - prefix: /
    services:
    - name: gateway-postal-codes
      port: 80
